--- a/desafio_SENAI/style.css
+++ b/desafio_SENAI/style.css
@@ -8,3 +8,201 @@ configurações iniciais*/
     margin: 0;
     font-family: "Anek Devanagari", sans-serif;
 }
+
+/* Header */
+
+header {
+    background-color: #2e2d2ddc;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    height: 80px;
+    width: 1260px;
+    position: sticky;
+    top: 0;
+    z-index: 9;
+  
+    /* deixa um leve sombreado no header */
+    /* offset-x | offset-y | blur-radius | color */
+    box-shadow: 5px 5px 10px #2e2e2e;
+  }
+  
+  header img {
+    /* logo da escola */
+    width: 150px;
+    height: 50px;
+    margin-left: 100px;
+  }
+  
+  nav a {
+    margin: 0 20px;
+    text-decoration: none;
+    font-size: 20px;  
+    color: #fff;
+  }
+  nav a:hover {
+    padding: 5px 0px;
+    color: black;  
+  }
+    
+  .botao {
+    background-color: #e30613;
+    padding: 5px 15px 1px;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 10px;
+  }
+  
+  .botao:hover {
+    background-color: black;
+    padding: 5px 15px 1px;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 10px;
+  }
+  
+  /* banner principal */
+  main {
+    position: relative;
+    z-index: -1; 
+  }
+  
+  main img {
+    width: 100%;
+    height: 450px;
+    margin: 0;
+    padding: 0;
+    opacity: 0.7;    
+  }
+  
+  span {
+    color: #e30613;
+    font-weight: bolder;
+  }
+  
+  .destaqueTexto {
+    width: 250px;
+    height: 160px;
+    background-color: #ffffffc7;
+    /* Posiciona o texto */
+    position: absolute; 
+    top: 20%;
+    left: 10%;
+    border-radius: 10px;
+    font-size: 100%;
+  }
+  .destaqueTexto h1 {
+    margin: 1px 15px;  
+  }
+  
+  .destaqueTexto input {
+    background-color: #e30613;
+    padding: 5px 15px 1px;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 10px;
+    font-weight: bold;
+    width: 100px;
+    height: 30px;
+    /* margin-top: 1px; */
+    margin: 5px 75px;
+    border: 0;
+    cursor: pointer;
+  }
+  
+  .destaqueTexto input:hover {
+      background-color: black;
+      color: #fff;
+  }
+  
+  /* Section  */
+  section {
+    display: flex;
+    justify-content:center;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    margin: 40px;  
+  }
+  
+  section img {
+    width: 400px;
+    height: 250px;
+    border-radius: 5%;    
+  }
+  
+  section  a {
+    height: 250px;
+    box-shadow: 0 0 20px 5px rgba(0,0,0,0.5);
+    border-radius: 5%;
+    position: relative;
+    overflow: hidden;
+    transition: transform 0.5s;
+  }
+  
+  section a::after {
+    content: '';
+    width: 100%;
+    height: 100%;
+    top: -300px;
+    left: 0;
+    background: linear-gradient(-45deg, #ed1c1c,#c38c8c, #dcdbd8);
+    position: absolute;
+    transition: 0.5s;
+  }
+  
+  section a:hover::after {
+    top: 0;
+  }
+  section a:hover {
+    transform: translate(-10px);
+}
+section a:hover {
+transform: translateY(-10px);
+}
+section p{
+margin: 20px 0 15px 0;
+}
+
+/* Div (WhatsApp) */
+.fixed {
+    position: fixed;
+    /* Relativa a view (html todo) */
+    width: 70px;
+    height: 70px;
+    font-weight: bolder;
+    background-color: lightgreen;
+    bottom: 110px;
+    right: 30px;
+    border-radius: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center
+}
+
+.fixed img {
+height: 50px;
+width: 50px;
+margin-top: 10px;
+}
+
+/* Footer */
+footer {
+display: flex; 
+justify-content:space-between;
+align-items: center;
+height: 80px;
+width: 1260px;    
+border-top: 1px dashed red;
+background-color: #2e2d2ddc;
+}
+footer img {
+width: 150px;
+height: 50px;    
+margin-left: 100px;
+}
+.footerTexto {
+text-align: left;
+margin-right: 150px;
+color: #fff;
+}
